Bug 336141 - KPasswordDialog - Big icon in password dialog
Summary: KPasswordDialog - Big icon in password dialog
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-12 19:02 UTC by André Marcelo Alvarenga
Modified: 2014-06-17 21:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (90.06 KB, image/png)
2014-06-12 19:03 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-06-12 19:02:57 UTC
See screenshot.

Reproducible: Always

Steps to Reproduce:
1. Open System Settings;
2. In Accounts Details -> Password & User Account click on 'Change Password...' button
Comment 1 André Marcelo Alvarenga 2014-06-12 19:03:32 UTC
Created attachment 87150 [details]
Screenshot
Comment 2 David Edmundson 2014-06-13 15:04:03 UTC
That is hilariously huge. 
Confirming and reassigning to kdepasswd the app in the screenshot
Comment 3 David Edmundson 2014-06-13 15:05:05 UTC
Geert are you still maintianing this? 
Do you want a new bugzilla version for KF 5?
Comment 4 Christoph Feck 2014-06-17 21:16:35 UTC
Git commit 3f58df63f8d9956a9c5845a3672f8b8d35f03990 by Christoph Feck.
Committed on 17/06/2014 at 21:13.
Pushed by cfeck into branch 'master'.

Use standard message box icon size in password dialogs
REVIEW: 118740

M  +5    -1    src/knewpassworddialog.cpp
M  +5    -1    src/kpassworddialog.cpp

http://commits.kde.org/kwidgetsaddons/3f58df63f8d9956a9c5845a3672f8b8d35f03990