Use standard message box icon size in password dialogs

BUG: 336141
REVIEW: 118740